# elite-qualifier

./: README.md  ci.yml  main.py  pyproject.toml  safedict_simple.txt
