[tool.poetry]
name = "elite-qualifier"
version = "0.1.0"
description = "AutoCorrect"
authors = ["Hunter Baker <hunter.05baker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.6.5"
pandas = "^1.3.5"
tkinter-page = "^0.0.5"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
